--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         text-decoration: none;
       }
     </style>
-    <title>own-style</title>
+    <title>own style</title>
   </head>
   <body>
     <div id="root"></div>
